Support local replicated join and local exchange parallelism (#14893)