@@ -31,6 +31,7 @@ import java.util.Random;
 import java.util.Set;
 import javax.annotation.Nullable;
 import org.apache.calcite.rel.RelDistribution;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.pinot.calcite.rel.hint.PinotHintOptions;
 import org.apache.pinot.calcite.rel.rules.ImmutableTableOptions;
 import org.apache.pinot.calcite.rel.rules.TableOptions;
@@ -96,47 +97,54 @@ public class WorkerManager {
     }
     Map<Integer, DispatchablePlanMetadata> metadataMap = context.getDispatchablePlanMetadataMap();
     DispatchablePlanMetadata metadata = metadataMap.get(fragment.getFragmentId());
-    boolean leafPlan = isLeafPlan(metadata);
-    int childIdWithLocalExchange = findLocalExchange(children);
-    if (childIdWithLocalExchange >= 0) {
-      // If there is a local exchange (child with SINGLETON distribution), use the same worker assignment to avoid
-      // shuffling data.
-      // TODO:
-      //   1. Support partition parallelism
-      //   2. Check if there are conflicts (multiple children with different local exchange)
-      DispatchablePlanMetadata childMetadata = metadataMap.get(children.get(childIdWithLocalExchange).getFragmentId());
-      metadata.setWorkerIdToServerInstanceMap(childMetadata.getWorkerIdToServerInstanceMap());
-      metadata.setPartitionFunction(childMetadata.getPartitionFunction());
-      if (leafPlan) {
-        // Fake segments map for leaf plan
-        Set<Integer> workerIds = metadata.getWorkerIdToServerInstanceMap().keySet();
-        Map<Integer, Map<String, List<String>>> workerIdToSegmentsMap =
-            Maps.newHashMapWithExpectedSize(workerIds.size());
-        for (Integer workerId : workerIds) {
-          workerIdToSegmentsMap.put(workerId, Map.of(TableType.OFFLINE.name(), List.of()));
-        }
-        metadata.setWorkerIdToSegmentsMap(workerIdToSegmentsMap);
+    if (isLeafPlan(metadata)) {
+      // TODO: Revisit this logic and see if we can generalize this
+      // For LOOKUP join, join is leaf stage because there is no exchange added to the right side of the join. When we
+      // find a single local exchange child in the leaf stage, assign workers based on the local exchange child.
+      if (children.size() == 1 && isLocalExchange(children.get(0), context)) {
+        DispatchablePlanMetadata childMetadata = metadataMap.get(children.get(0).getFragmentId());
+        metadata.setWorkerIdToServerInstanceMap(assignWorkersForLocalExchange(childMetadata));
+        metadata.setPartitionFunction(childMetadata.getPartitionFunction());
+      } else {
+        assignWorkersToLeafFragment(fragment, context);
       }
-    } else if (leafPlan) {
-      assignWorkersToLeafFragment(fragment, context);
     } else {
       assignWorkersToIntermediateFragment(fragment, context);
     }
   }
 
-  /**
-   * Returns the index of the child fragment that has a local exchange (SINGLETON distribution), or -1 if none exists.
-   */
-  private int findLocalExchange(List<PlanFragment> children) {
-    int numChildren = children.size();
-    for (int i = 0; i < numChildren; i++) {
-      PlanNode childPlanNode = children.get(i).getFragmentRoot();
-      if (childPlanNode instanceof MailboxSendNode
-          && ((MailboxSendNode) childPlanNode).getDistributionType() == RelDistribution.Type.SINGLETON) {
-        return i;
-      }
+  private boolean isLocalExchange(PlanFragment fragment, DispatchablePlanContext context) {
+    PlanNode planNode = fragment.getFragmentRoot();
+    if (planNode instanceof MailboxSendNode
+        && ((MailboxSendNode) planNode).getDistributionType() == RelDistribution.Type.SINGLETON) {
+      DispatchablePlanMetadata dispatchablePlanMetadata =
+          context.getDispatchablePlanMetadataMap().get(fragment.getFragmentId());
+      // NOTE: Do not count replicated table as local exchange because it needs to follow the worker assignment for its
+      //       peer node.
+      return dispatchablePlanMetadata.getReplicatedSegments() == null;
     }
-    return -1;
+    return false;
+  }
+
+  private Map<Integer, QueryServerInstance> assignWorkersForLocalExchange(DispatchablePlanMetadata childMetadata) {
+    int partitionParallelism = childMetadata.getPartitionParallelism();
+    Map<Integer, QueryServerInstance> childWorkerIdToServerInstanceMap = childMetadata.getWorkerIdToServerInstanceMap();
+    if (partitionParallelism == 1) {
+      return childWorkerIdToServerInstanceMap;
+    } else {
+      // Create multiple intermediate stage workers on the same instance for each worker in the child
+      int numChildWorkers = childWorkerIdToServerInstanceMap.size();
+      Map<Integer, QueryServerInstance> workerIdToServerInstanceMap =
+          Maps.newHashMapWithExpectedSize(numChildWorkers * partitionParallelism);
+      int workerId = 0;
+      for (int i = 0; i < numChildWorkers; i++) {
+        QueryServerInstance serverInstance = childWorkerIdToServerInstanceMap.get(i);
+        for (int j = 0; j < partitionParallelism; j++) {
+          workerIdToServerInstanceMap.put(workerId++, serverInstance);
+        }
+      }
+      return workerIdToServerInstanceMap;
+    }
   }
 
   private static boolean isLeafPlan(DispatchablePlanMetadata metadata) {
@@ -152,55 +160,92 @@ public class WorkerManager {
     DispatchablePlanMetadata metadata = metadataMap.get(fragment.getFragmentId());
 
     if (isPrePartitionAssignment(children, metadataMap)) {
-      // If the first child is partitioned and can be inherent from this intermediate stage, use the same worker
-      // assignment to avoid shuffling data.
-      // When partition parallelism is configured,
-      // 1. Create multiple intermediate stage workers on the same instance for each worker in the first child if the
-      //    first child is a table scan. this is b/c we cannot pre-config parallelism on leaf stage thus needs fan-out.
-      // 2. Ignore partition parallelism when first child is NOT table scan b/c it would've done fan-out already.
+      // If all the children are pre-partitioned the same way, use local exchange.
       DispatchablePlanMetadata firstChildMetadata = metadataMap.get(children.get(0).getFragmentId());
-      int partitionParallelism = firstChildMetadata.getPartitionParallelism();
-      Map<Integer, QueryServerInstance> childWorkerIdToServerInstanceMap =
-          firstChildMetadata.getWorkerIdToServerInstanceMap();
-      if (partitionParallelism == 1 || firstChildMetadata.getScannedTables().isEmpty()) {
-        metadata.setWorkerIdToServerInstanceMap(childWorkerIdToServerInstanceMap);
-      } else {
-        int numChildWorkers = childWorkerIdToServerInstanceMap.size();
-        Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = new HashMap<>();
-        int workerId = 0;
-        for (int i = 0; i < numChildWorkers; i++) {
-          QueryServerInstance serverInstance = childWorkerIdToServerInstanceMap.get(i);
-          for (int j = 0; j < partitionParallelism; j++) {
-            workerIdToServerInstanceMap.put(workerId++, serverInstance);
-          }
-        }
-        metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
-      }
+      metadata.setWorkerIdToServerInstanceMap(assignWorkersForLocalExchange(firstChildMetadata));
       metadata.setPartitionFunction(firstChildMetadata.getPartitionFunction());
-    } else {
-      // If the query has more than one table, it is possible that the tables could be hosted on different tenants.
-      // The intermediate stage will be processed on servers randomly picked from the tenants belonging to either or
-      // all of the tables in the query.
-      // TODO: actually make assignment strategy decisions for intermediate stages
+      return;
+    }
+
+    if (metadata.isRequiresSingletonInstance()) {
+      // When singleton instance is required, return a single worker with ID 0.
       List<ServerInstance> serverInstances = assignServerInstances(context);
-      if (metadata.isRequiresSingletonInstance()) {
-        // require singleton should return a single global worker ID with 0;
-        metadata.setWorkerIdToServerInstanceMap(Collections.singletonMap(0,
-            new QueryServerInstance(serverInstances.get(RANDOM.nextInt(serverInstances.size())))));
+      metadata.setWorkerIdToServerInstanceMap(
+          Map.of(0, new QueryServerInstance(serverInstances.get(RANDOM.nextInt(serverInstances.size())))));
+      return;
+    }
+
+    // Assign workers for local exchange if there is one
+    DispatchablePlanMetadata localExchangeChildMetadata = null;
+    Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = null;
+    for (PlanFragment child : children) {
+      if (isLocalExchange(child, context)) {
+        Preconditions.checkState(localExchangeChildMetadata == null, "Found multiple local exchanges in the children");
+        localExchangeChildMetadata = metadataMap.get(child.getFragmentId());
+        workerIdToServerInstanceMap = assignWorkersForLocalExchange(localExchangeChildMetadata);
+      }
+    }
+
+    // If there is no local exchange, assign workers to the servers hosting the tables
+    List<ServerInstance> serverInstances = null;
+    if (workerIdToServerInstanceMap == null) {
+      serverInstances = assignServerInstances(context);
+      int stageParallelism = Integer.parseInt(
+          context.getPlannerContext().getOptions().getOrDefault(QueryOptionKey.STAGE_PARALLELISM, "1"));
+      workerIdToServerInstanceMap = Maps.newHashMapWithExpectedSize(serverInstances.size() * stageParallelism);
+      int workerId = 0;
+      if (stageParallelism == 1) {
+        for (ServerInstance serverInstance : serverInstances) {
+          workerIdToServerInstanceMap.put(workerId++, new QueryServerInstance(serverInstance));
+        }
       } else {
-        Map<String, String> options = context.getPlannerContext().getOptions();
-        int stageParallelism = Integer.parseInt(options.getOrDefault(QueryOptionKey.STAGE_PARALLELISM, "1"));
-        Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = new HashMap<>();
-        int workerId = 0;
         for (ServerInstance serverInstance : serverInstances) {
           QueryServerInstance queryServerInstance = new QueryServerInstance(serverInstance);
           for (int i = 0; i < stageParallelism; i++) {
             workerIdToServerInstanceMap.put(workerId++, queryServerInstance);
           }
         }
-        metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
-        metadata.setPartitionFunction(DEFAULT_SHUFFLE_PARTITION_FUNCTION);
       }
+    }
+
+    // Handle replicated leaf stage, fill worker ids based on the assignment from:
+    // - Local exchange peer if exists
+    // - Intermediate stage workers
+    // Do not include workers resulted from parallelism to reduce repeated work
+    for (PlanFragment child : children) {
+      DispatchablePlanMetadata childMetadata = metadataMap.get(child.getFragmentId());
+      Map<String, List<String>> replicatedSegments = childMetadata.getReplicatedSegments();
+      if (replicatedSegments != null) {
+        // Fill worker ids for the replicated
+        assert
+            childMetadata.getWorkerIdToServerInstanceMap() == null && childMetadata.getWorkerIdToSegmentsMap() == null;
+        Map<Integer, QueryServerInstance> childWorkerIdToServerInstanceMap;
+        Map<Integer, Map<String, List<String>>> childWorkerIdToSegmentsMap;
+        if (localExchangeChildMetadata != null) {
+          childWorkerIdToServerInstanceMap = localExchangeChildMetadata.getWorkerIdToServerInstanceMap();
+          childWorkerIdToSegmentsMap = Maps.newHashMapWithExpectedSize(childWorkerIdToServerInstanceMap.size());
+          for (Integer workerId : childWorkerIdToServerInstanceMap.keySet()) {
+            childWorkerIdToSegmentsMap.put(workerId, replicatedSegments);
+          }
+        } else {
+          int numWorkers = serverInstances.size();
+          childWorkerIdToServerInstanceMap = Maps.newHashMapWithExpectedSize(numWorkers);
+          childWorkerIdToSegmentsMap = Maps.newHashMapWithExpectedSize(numWorkers);
+          for (int workerId = 0; workerId < numWorkers; workerId++) {
+            childWorkerIdToServerInstanceMap.put(workerId, new QueryServerInstance(serverInstances.get(workerId)));
+            childWorkerIdToSegmentsMap.put(workerId, replicatedSegments);
+          }
+        }
+        childMetadata.setWorkerIdToServerInstanceMap(childWorkerIdToServerInstanceMap);
+        childMetadata.setWorkerIdToSegmentsMap(childWorkerIdToSegmentsMap);
+      }
+    }
+
+    metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
+    if (localExchangeChildMetadata != null) {
+      metadata.setPartitionFunction(localExchangeChildMetadata.getPartitionFunction());
+    } else {
+      metadata.setPartitionFunction(DEFAULT_SHUFFLE_PARTITION_FUNCTION);
     }
   }
 
@@ -225,9 +270,11 @@ public class WorkerManager {
       } else if (!partitionFunction.equalsIgnoreCase(childMetadata.getPartitionFunction())) {
         return false;
       }
-      int childComputedPartitionCount =
-          childMetadata.getWorkerIdToServerInstanceMap().size() * (isLeafPlan(childMetadata)
-              ? childMetadata.getPartitionParallelism() : 1);
+      Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = childMetadata.getWorkerIdToServerInstanceMap();
+      if (workerIdToServerInstanceMap == null) {
+        return false;
+      }
+      int childComputedPartitionCount = workerIdToServerInstanceMap.size() * childMetadata.getPartitionParallelism();
       if (partitionCount == 0) {
         partitionCount = childComputedPartitionCount;
       } else if (childComputedPartitionCount != partitionCount) {
@@ -237,6 +284,9 @@ public class WorkerManager {
     return true;
   }
 
+  /**
+   * Returns the servers serving any segment of the tables in the query.
+   */
   private List<ServerInstance> assignServerInstances(DispatchablePlanContext context) {
     List<ServerInstance> serverInstances;
     Set<String> tableNames = context.getTableNames();
@@ -294,13 +344,27 @@ public class WorkerManager {
   private void assignWorkersToLeafFragment(PlanFragment fragment, DispatchablePlanContext context) {
     DispatchablePlanMetadata metadata = context.getDispatchablePlanMetadataMap().get(fragment.getFragmentId());
     Map<String, String> tableOptions = metadata.getTableOptions();
-    String partitionKey =
-        tableOptions != null ? tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_KEY) : null;
-    if (partitionKey == null) {
-      // when partition key is not given, we do not partition assign workers for leaf-stage.
+    if (tableOptions == null) {
       assignWorkersToNonPartitionedLeafFragment(metadata, context);
-    } else {
+      return;
+    }
+
+    String partitionParallelismStr = tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM);
+    int partitionParallelism = partitionParallelismStr != null ? Integer.parseInt(partitionParallelismStr) : 1;
+    Preconditions.checkState(partitionParallelism > 0, "'%s' must be positive: %s, got: %s",
+        PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM, partitionParallelism);
+    metadata.setPartitionParallelism(partitionParallelism);
+
+    String partitionKey = tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_KEY);
+    if (partitionKey != null) {
       assignWorkersToPartitionedLeafFragment(metadata, context, partitionKey, tableOptions);
+      return;
+    }
+
+    if (Boolean.parseBoolean(tableOptions.get(PinotHintOptions.TableHintOptions.IS_REPLICATED))) {
+      setSegmentsForReplicatedLeafFragment(metadata);
+    } else {
+      assignWorkersToNonPartitionedLeafFragment(metadata, context);
     }
   }
 
@@ -316,8 +380,7 @@ public class WorkerManager {
     // acquire time boundary info if it is a hybrid table.
     if (routingTableMap.size() > 1) {
       TimeBoundaryInfo timeBoundaryInfo = _routingManager.getTimeBoundaryInfo(
-          TableNameBuilder.forType(TableType.OFFLINE)
-              .tableNameWithType(TableNameBuilder.extractRawTableName(tableName)));
+          TableNameBuilder.OFFLINE.tableNameWithType(TableNameBuilder.extractRawTableName(tableName)));
       if (timeBoundaryInfo != null) {
         metadata.setTimeBoundaryInfo(timeBoundaryInfo);
       } else {
@@ -337,8 +400,7 @@ public class WorkerManager {
         Map<String, List<String>> tableTypeToSegmentListMap =
             serverInstanceToSegmentsMap.computeIfAbsent(serverEntry.getKey(), k -> new HashMap<>());
         // TODO: support optional segments for multi-stage engine.
-        Preconditions.checkState(
-            tableTypeToSegmentListMap.put(tableType, serverEntry.getValue().getSegments()) == null,
+        Preconditions.checkState(tableTypeToSegmentListMap.put(tableType, serverEntry.getValue().getSegments()) == null,
             "Entry for server {} and table type: {} already exist!", serverEntry.getKey(), tableType);
       }
 
@@ -357,7 +419,6 @@ public class WorkerManager {
     }
     metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
     metadata.setWorkerIdToSegmentsMap(workerIdToSegmentsMap);
-    metadata.setPartitionFunction(DEFAULT_SHUFFLE_PARTITION_FUNCTION);
   }
 
   /**
@@ -367,33 +428,87 @@ public class WorkerManager {
    * @return keyed-map from table type(s) to routing table(s).
    */
   private Map<String, RoutingTable> getRoutingTable(String tableName, long requestId) {
-    String rawTableName = TableNameBuilder.extractRawTableName(tableName);
     TableType tableType = TableNameBuilder.getTableTypeFromTableName(tableName);
-    Map<String, RoutingTable> routingTableMap = new HashMap<>();
-    RoutingTable routingTable;
     if (tableType == null) {
-      routingTable = getRoutingTable(rawTableName, TableType.OFFLINE, requestId);
-      if (routingTable != null) {
-        routingTableMap.put(TableType.OFFLINE.name(), routingTable);
+      // Raw table name
+      Map<String, RoutingTable> routingTableMap = new HashMap<>(4);
+      RoutingTable offlineRoutingTable =
+          getRoutingTableHelper(TableNameBuilder.OFFLINE.tableNameWithType(tableName), requestId);
+      if (offlineRoutingTable != null) {
+        routingTableMap.put(TableType.OFFLINE.name(), offlineRoutingTable);
       }
-      routingTable = getRoutingTable(rawTableName, TableType.REALTIME, requestId);
-      if (routingTable != null) {
-        routingTableMap.put(TableType.REALTIME.name(), routingTable);
+      RoutingTable realtimeRoutingTable =
+          getRoutingTableHelper(TableNameBuilder.REALTIME.tableNameWithType(tableName), requestId);
+      if (realtimeRoutingTable != null) {
+        routingTableMap.put(TableType.REALTIME.name(), realtimeRoutingTable);
       }
+      return routingTableMap;
     } else {
-      routingTable = getRoutingTable(tableName, tableType, requestId);
-      if (routingTable != null) {
-        routingTableMap.put(tableType.name(), routingTable);
-      }
+      // Table name with type
+      RoutingTable routingTable = getRoutingTableHelper(tableName, requestId);
+      return routingTable != null ? Map.of(tableType.name(), routingTable) : Map.of();
     }
-    return routingTableMap;
   }
 
-  private RoutingTable getRoutingTable(String tableName, TableType tableType, long requestId) {
-    String tableNameWithType =
-        TableNameBuilder.forType(tableType).tableNameWithType(TableNameBuilder.extractRawTableName(tableName));
+  @Nullable
+  private RoutingTable getRoutingTableHelper(String tableNameWithType, long requestId) {
     return _routingManager.getRoutingTable(
         CalciteSqlCompiler.compileToBrokerRequest("SELECT * FROM \"" + tableNameWithType + "\""), requestId);
+  }
+
+  // --------------------------------------------------------------------------
+  // Replicated non-partitioned leaf stage assignment
+  // --------------------------------------------------------------------------
+  private void setSegmentsForReplicatedLeafFragment(DispatchablePlanMetadata metadata) {
+    String tableName = metadata.getScannedTables().get(0);
+    Map<String, List<String>> segmentsMap = getSegments(tableName);
+    Preconditions.checkState(!segmentsMap.isEmpty(), "Unable to find segments for table: %s", tableName);
+
+    // Acquire time boundary info if it is a hybrid table.
+    if (segmentsMap.size() > 1) {
+      TimeBoundaryInfo timeBoundaryInfo = _routingManager.getTimeBoundaryInfo(
+          TableNameBuilder.OFFLINE.tableNameWithType(TableNameBuilder.extractRawTableName(tableName)));
+      if (timeBoundaryInfo != null) {
+        metadata.setTimeBoundaryInfo(timeBoundaryInfo);
+      } else {
+        // Remove offline table segments if no time boundary info is acquired.
+        segmentsMap.remove(TableType.OFFLINE.name());
+      }
+    }
+
+    // TODO: Support unavailable segments and optional segments for replicated leaf stage
+    metadata.setReplicatedSegments(segmentsMap);
+  }
+
+  /**
+   * Returns the segments for the given table, keyed by table type.
+   * TODO: It doesn't handle unavailable segments.
+   */
+  private Map<String, List<String>> getSegments(String tableName) {
+    TableType tableType = TableNameBuilder.getTableTypeFromTableName(tableName);
+    if (tableType == null) {
+      // Raw table name
+      Map<String, List<String>> segmentsMap = new HashMap<>(4);
+      List<String> offlineSegments = setSegmentsHelper(TableNameBuilder.OFFLINE.tableNameWithType(tableName));
+      if (CollectionUtils.isNotEmpty(offlineSegments)) {
+        segmentsMap.put(TableType.OFFLINE.name(), offlineSegments);
+      }
+      List<String> realtimeSegments = setSegmentsHelper(TableNameBuilder.REALTIME.tableNameWithType(tableName));
+      if (CollectionUtils.isNotEmpty(realtimeSegments)) {
+        segmentsMap.put(TableType.REALTIME.name(), realtimeSegments);
+      }
+      return segmentsMap;
+    } else {
+      // Table name with type
+      List<String> segments = setSegmentsHelper(tableName);
+      return CollectionUtils.isNotEmpty(segments) ? Map.of(tableType.name(), segments) : Map.of();
+    }
+  }
+
+  @Nullable
+  private List<String> setSegmentsHelper(String tableNameWithType) {
+    return _routingManager.getSegments(
+        CalciteSqlCompiler.compileToBrokerRequest("SELECT * FROM \"" + tableNameWithType + "\""));
   }
 
   // --------------------------------------------------------------------------
@@ -412,11 +527,6 @@ public class WorkerManager {
 
     String partitionFunction = tableOptions.getOrDefault(PinotHintOptions.TableHintOptions.PARTITION_FUNCTION,
         DEFAULT_TABLE_PARTITION_FUNCTION);
-
-    String partitionParallelismStr = tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM);
-    int partitionParallelism = partitionParallelismStr != null ? Integer.parseInt(partitionParallelismStr) : 1;
-    Preconditions.checkState(partitionParallelism > 0, "'%s' must be positive: %s, got: %s",
-        PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM, partitionParallelism);
 
     String tableName = metadata.getScannedTables().get(0);
     // calculates the partition table info using the routing manager
@@ -451,7 +561,6 @@ public class WorkerManager {
     metadata.setWorkerIdToSegmentsMap(workerIdToSegmentsMap);
     metadata.setTimeBoundaryInfo(partitionTableInfo._timeBoundaryInfo);
     metadata.setPartitionFunction(partitionFunction);
-    metadata.setPartitionParallelism(partitionParallelism);
   }
 
   @Nullable
@@ -519,8 +628,8 @@ public class WorkerManager {
           fullyReplicatedServers.retainAll(realtimePartitionInfo._fullyReplicatedServers);
           Preconditions.checkState(!fullyReplicatedServers.isEmpty(),
               "Failed to find fully replicated server for partition: %s in hybrid table: %s", i, tableName);
-          partitionInfoMap[i] = new PartitionInfo(
-              fullyReplicatedServers, offlinePartitionInfo._segments, realtimePartitionInfo._segments);
+          partitionInfoMap[i] = new PartitionInfo(fullyReplicatedServers, offlinePartitionInfo._segments,
+              realtimePartitionInfo._segments);
         }
         return new PartitionTableInfo(partitionInfoMap, timeBoundaryInfo, offlineTpi.getPartitionColumn(),
             numPartitions, offlineTpi.getPartitionFunctionName());
@@ -541,16 +650,15 @@ public class WorkerManager {
   private static void verifyCompatibility(TablePartitionInfo offlineTpi, TablePartitionInfo realtimeTpi)
       throws IllegalArgumentException {
     Preconditions.checkState(offlineTpi.getPartitionColumn().equals(realtimeTpi.getPartitionColumn()),
-        "Partition column mismatch for hybrid table %s: %s offline vs %s online",
-        offlineTpi.getTableNameWithType(), offlineTpi.getPartitionColumn(), realtimeTpi.getPartitionColumn());
+        "Partition column mismatch for hybrid table %s: %s offline vs %s online", offlineTpi.getTableNameWithType(),
+        offlineTpi.getPartitionColumn(), realtimeTpi.getPartitionColumn());
     Preconditions.checkState(offlineTpi.getNumPartitions() == realtimeTpi.getNumPartitions(),
-        "Partition size mismatch for hybrid table %s: %s offline vs %s online",
-        offlineTpi.getTableNameWithType(), offlineTpi.getNumPartitions(), realtimeTpi.getNumPartitions());
+        "Partition size mismatch for hybrid table %s: %s offline vs %s online", offlineTpi.getTableNameWithType(),
+        offlineTpi.getNumPartitions(), realtimeTpi.getNumPartitions());
     Preconditions.checkState(
         offlineTpi.getPartitionFunctionName().equalsIgnoreCase(realtimeTpi.getPartitionFunctionName()),
-        "Partition function mismatch for hybrid table %s: %s offline vs %s online",
-        offlineTpi.getTableNameWithType(), offlineTpi.getPartitionFunctionName(),
-        realtimeTpi.getPartitionFunctionName());
+        "Partition function mismatch for hybrid table %s: %s offline vs %s online", offlineTpi.getTableNameWithType(),
+        offlineTpi.getPartitionFunctionName(), realtimeTpi.getPartitionFunctionName());
   }
 
   /**
@@ -563,8 +671,8 @@ public class WorkerManager {
         "Partition key: %s does not match partition column: %s for table: %s", partitionKey,
         partitionTableInfo._partitionKey, tableNameWithType);
     Preconditions.checkState(partitionTableInfo._numPartitions == numPartitions,
-        "Partition size mismatch (hint: %s, table: %s) for table: %s", numPartitions,
-        partitionTableInfo._numPartitions, tableNameWithType);
+        "Partition size mismatch (hint: %s, table: %s) for table: %s", numPartitions, partitionTableInfo._numPartitions,
+        tableNameWithType);
     Preconditions.checkState(partitionTableInfo._partitionFunction.equalsIgnoreCase(partitionFunction),
         "Partition function mismatch (hint: %s, table: %s) for table %s", partitionFunction,
         partitionTableInfo._partitionFunction, tableNameWithType);
@@ -572,8 +680,7 @@ public class WorkerManager {
 
   private PartitionTableInfo getOfflinePartitionTableInfo(String offlineTableName) {
     TablePartitionInfo offlineTpi = _routingManager.getTablePartitionInfo(offlineTableName);
-    Preconditions.checkState(offlineTpi != null, "Failed to find table partition info for table: %s",
-        offlineTableName);
+    Preconditions.checkState(offlineTpi != null, "Failed to find table partition info for table: %s", offlineTableName);
     return PartitionTableInfo.fromTablePartitionInfo(offlineTpi, TableType.OFFLINE);
   }
 
@@ -601,11 +708,11 @@ public class WorkerManager {
       _partitionFunction = partitionFunction;
     }
 
-    public static PartitionTableInfo fromTablePartitionInfo(
-        TablePartitionInfo tablePartitionInfo, TableType tableType) {
+    public static PartitionTableInfo fromTablePartitionInfo(TablePartitionInfo tablePartitionInfo,
+        TableType tableType) {
       if (!tablePartitionInfo.getSegmentsWithInvalidPartition().isEmpty()) {
-        throw new IllegalStateException("Find " + tablePartitionInfo.getSegmentsWithInvalidPartition().size()
-            + " segments with invalid partition");
+        throw new IllegalStateException(
+            "Find " + tablePartitionInfo.getSegmentsWithInvalidPartition().size() + " segments with invalid partition");
       }
 
       int numPartitions = tablePartitionInfo.getNumPartitions();
